--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
     "name": "flatdep",
-    "version": "1.1.2",
+    "version": "1.1.3",
     "description": "flat dependencies files",
     "main": "index.js",
     "scripts": {
         "test": "node test.js"
     },
-    "files": ["index.js"],
+    "files": [
+        "index.js"
+    ],
     "repository": {
         "type": "git",
         "url": "https://github.com/cenfun/flatdep.git"
