--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
         "url": "https://github.com/cenfun/flatdep.git"
     },
     "dependencies": {
-        "console-grid": "^1.0.16"
+        "console-grid": "^1.0.17"
+    },
+    "devDependencies": {
+        "eslint": "^7.24.0"
     }
 }
