--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "flatdep",
-    "version": "1.1.6",
+    "version": "1.1.7",
     "description": "flat dependencies files",
     "main": "lib/index.js",
     "scripts": {
@@ -15,7 +15,8 @@
     },
     "dependencies": {
         "console-grid": "^1.0.17",
-        "eight-colors": "^1.0.0"
+        "eight-colors": "^1.0.0",
+        "semver": "^7.3.5"
     },
     "devDependencies": {
         "eslint": "^7.27.0"
