--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
         "url": "https://github.com/cenfun/flatdep.git"
     },
     "dependencies": {
-        "console-grid": "^1.0.17",
-        "eight-colors": "^1.0.0",
-        "semver": "^7.3.5"
+        "console-grid": "^2.0.0",
+        "eight-colors": "^1.0.1",
+        "semver": "^7.3.7"
     },
     "devDependencies": {
-        "eslint": "^8.3.0"
+        "eslint": "^8.22.0",
+        "eslint-config-plus": "^1.0.3",
+        "eslint-plugin-html": "^7.1.0"
     }
 }
